src/main/java/oo/solid/isp/sample/good/TelefoniaCelular.java
package oo.solid.isp.sample.good;

public class TelefoniaCelular implements Telefonia, SmartPhone {

    @Override
    public void tirarFoto() {
        // take a picture
    }

    @Override
    public void tocar() {

    }

    @Override
    public void discar() {

    }
}
